# mms-svr

./: CMakeLists.txt  README.txt
cmake/: FindLibEvent.cmake  FindLibJson.cmake  FindLibMysql.cmake  FindLibRedis.cmake  FindLibSSL.cmake  FindLibThrift.cmake
doc/: mmsdb.sql
include/: event_hash.h  fastbuffer.h  logger.h  memstuff.h  svr_res.h  util.h  winlogger.h  yyjson.h  yyssl.h  yytickout.h
include/event1.4.7/: config.h
include/ssl/openssl/: opensslconf.h
lib/: json.lib  jsonD.lib
lib/event1.4.7/: libevent.lib  libevent_d.lib
lib/ssl/: ssleay32.lib
src/: CMakeLists.txt  stdafx.h
src/event/: CMakeLists.txt  event_msgqueue.h  lockqueue.h  lockqueuemap.h  yylibevent.cpp  yylibevent.h
src/mmsclient/: ReadMe.txt  mmsclient.cpp  mmsclient.sln  mmsclient.vcproj  senddata.txt  stdafx.cpp
src/mysql/: CMakeLists.txt  yylibmysql.cpp  yylibmysql.h  yylibmysqlpp.cpp  yylibmysqlpp.h
src/redis/: CMakeLists.txt  libeventdef.h  yyredis.cpp  yyredis.h
src/thrift/: CMakeLists.txt
src/tinyxml2/: CMakeLists.txt
src/yymm_svr/: CMakeLists.txt  cfg.cpp  cfg.h  cmdproc.cpp  cmdproc.h  jsonprotocol.h  main.cpp  mmsexecmag.cpp  mmsexecmag.h  yymms_svr.cpp  yymms_svr.h
tools/: exit.sh  gen_res.bat
win32/: svrlib.vcproj  yymms_svr.sln  yymms_svr.vcproj  yysvr_res.mc  yysvr_res.reg
win32/hiredis/: hiredis.vcproj  net.c
