CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

if(CMAKE_BUILD_TYPE STREQUAL "RELEASE")
else()
	SET(CMAKE_BUILD_TYPE DEBUG)
	ADD_DEFINITIONS("-DDEBUG")
	ADD_DEFINITIONS("-D_DEBUG")
	ADD_DEFINITIONS("-g")
endif()
message("CMAKE_BUILD_TYPE==${CMAKE_BUILD_TYPE}, you can specify it with -DCMAKE_BUILD_TYPE=RELEASE")
#SET(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O0 -Wall -g -ggdb")
SET(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -g")
SET(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -O3 -Wall")


#--------------------
# Project Manager
#--------------------
SET(EXE_NAME yymmssvr)

SET(LIBRARY_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/lib)
SET(EXECUTABLE_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/bin)

PROJECT(${EXE_NAME})
ADD_SUBDIRECTORY(src)
